First wave of Sonar fixes.